:pencil2: [FIX] Little Adjustments to description and progress bar visibility

--- a/styles/components/HeaderMobile.css
+++ b/styles/components/HeaderMobile.css
@@ -7,7 +7,7 @@
 
 .navbar__mobile--sticky {
 	position: fixed;
-	top: 0;
+	top: 8px;
 	z-index: 10;
 }
 
